--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,7 +39,7 @@ header{
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
 }
 header > h1{
-    color: white;
+    color: var(--cor0);
     font-size: 3em;
     font-weight: normal;
     margin-bottom: 20px;
@@ -52,7 +52,7 @@ header p {
     font-size: 1.2em;
     text-align: center;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.322);
-    max-width:500px;
+    max-width: 500px;
     margin:auto;
 }
 nav{
