--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,7 +39,7 @@ header{
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
 }
 header > h1{
-    color: var(--cor0);
+    color:white;
     font-size: 3em;
     font-weight: normal;
     margin-bottom: 20px;
